src/components/style/Input.css
form {
  width: 100%;
}
ul {
  list-style-type: none;
  padding: 0px;
  background-color: #fff;
  margin: 0px;
}

.form-field {
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
  background-color: #fff;
}
.input-wrapper {
  display: flex;
  background-color: #fff;
}

.input-field {
  box-sizing: border-box;
  background: rgba(0, 0, 0, 0.003);
  width: 100%;
  height: 65px;
  padding: 16px 16px 16px 60px;
  border: none;
  font-size: 24px;
  font-style: italic;
  border: 1px solid #e6e6e6;
}
.input-field:focus {
  outline: none;
  box-shadow: 0 2px 4px 0 rgba(206, 147, 146, 255);
}
.output-field .todo-list li {
  display: flex;
  align-items: center;
  border: 1px solid #e6e6e6;
}

.checkbox {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.todo-items {
  font-size: 24px;
  padding-left: 17px;
}
.menu-bar {
  display: flex;
  justify-content: space-between;
  padding: 10px 15px;
}
.actions {
  display: flex;
  width: 67%;
  justify-content: space-between;
}
.actions ul {
  display: flex;
}
.actions button {
  background-color: #fff;
  border: none;
  padding: 3px 7px;
  font-size: 15px;
  border-radius: 3px;
}
.actions button:hover {
  border: 1px solid #ce4646;
  cursor: pointer;
}
.actions .clear:hover {
  border: none;
  text-decoration: underline;
}

